fixed alignment

--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@ img {
     display:block;
     max-height:80%;
     max-width:80%;
+    margin-left:auto;
+    margin-right:auto;
 }
 .column{
-    margin:25px auto;
+    margin:35px auto;
     float:left;
     width:33.33%;
-    padding:5px;
 }
 .row::after{
     content:"";
